--- a/.github/workflows/Extract-Changes.yml
+++ b/.github/workflows/Extract-Changes.yml
@@ -39,3 +39,11 @@ jobs:
                -H "Content-Type: application/text" \
                -H "Authorization: Bearer ${{ secrets.API_KEY }}" \
                -d '${{steps.step1.outputs.fileoutput}}'
+
+
+       - name: Call Naming Convention Check IFlow
+        run: |
+          echo "${{steps.step1.outputs.fileoutput}}"
+          curl -v -i -X GET https://accenture-sbg-asg.it-cpi024-rt.cfapps.eu10-002.hana.ondemand.com/http/NamingConventionCheckwithPD \
+               -H "Content-Type: application/text" \
+               -H "Authorization: Bearer ${{ secrets.API_KEY }}" \
