--- a/.github/workflows/Extract-Changes.yml
+++ b/.github/workflows/Extract-Changes.yml
@@ -32,14 +32,13 @@ jobs:
             echo EOF
           } >> "$GITHUB_OUTPUT"
 
-      - name: Get OAuth Token
+            - name: Get OAuth Token
         id: get_token
         run: |
           echo "🔑 Requesting OAuth2 token..."
           response=$(curl -s -X POST \
-            -u "${{ secrets.OAUTH_CLIENT_ID }}:${{ secrets.OAUTH_CLIENT_SECRET }}" \
             -H "Content-Type: application/x-www-form-urlencoded" \
-            -d "grant_type=client_credentials" \
+            -d "grant_type=client_credentials&client_id=${{ secrets.OAUTH_CLIENT_ID }}&client_secret=${{ secrets.OAUTH_CLIENT_SECRET }}" \
             "${{ secrets.OAUTH_TOKEN_URL }}")
 
           token=$(echo $response | jq -r '.access_token')
