--- a/.github/workflows/Extract-Changes.yml
+++ b/.github/workflows/Extract-Changes.yml
@@ -38,13 +38,15 @@ jobs:
           echo "🔑 Requesting OAuth2 token..."
           response=$(curl -s -X POST \
             -H "Content-Type: application/x-www-form-urlencoded" \
-            -d "grant_type=client_credentials&client_id=${{ secrets.OAUTH_CLIENT_ID }}&client_secret=${{ secrets.OAUTH_CLIENT_SECRET }}" \
+            -d "grant_type=client_credentials" \
+            -d "client_id=${{ secrets.OAUTH_CLIENT_ID }}" \
+            -d "client_secret=${{ secrets.OAUTH_CLIENT_SECRET }}" \
             "${{ secrets.OAUTH_TOKEN_URL }}")
 
-          token=$(echo $response | jq -r '.access_token')
+          echo "📥 Raw response: $response"
+          token=$(echo "$response" | jq -r '.access_token')
           if [ "$token" == "null" ] || [ -z "$token" ]; then
             echo "❌ Failed to fetch access token"
-            echo "$response"
             exit 1
           fi
           echo "✅ Successfully retrieved access token"
