--- a/.github/workflows/Extract-Changes.yml
+++ b/.github/workflows/Extract-Changes.yml
@@ -3,7 +3,7 @@ name: Extract Changes
 on:
   push:
     paths:
-      - 'CPI_Artifacts_Metadata.txt'  # or specify specific file types you're interested in
+      - 'CPI_Artifacts_Metadata.txt'
 
 jobs:
   extract:
@@ -14,7 +14,7 @@ jobs:
         id: step0
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Important! Full history needed for proper diffs
+          fetch-depth: 0
 
       - name: Extract Changes
         id: step1
@@ -32,13 +32,32 @@ jobs:
             echo EOF
           } >> "$GITHUB_OUTPUT"
 
+      - name: Get OAuth Token
+        id: get_token
+        run: |
+          echo "🔑 Requesting OAuth2 token..."
+          response=$(curl -s -X POST ${{ secrets.OAUTH_TOKEN_URL }} \
+            -H "Content-Type: application/x-www-form-urlencoded" \
+            -d "grant_type=client_credentials" \
+            -d "client_id=${{ secrets.OAUTH_CLIENT_ID }}" \
+            -d "client_secret=${{ secrets.OAUTH_CLIENT_SECRET }}")
+
+          echo "📥 Raw response: $response"
+          token=$(echo "$response" | jq -r '.access_token')
+          if [ "$token" == "null" ] || [ -z "$token" ]; then
+            echo "❌ Failed to fetch access token"
+            exit 1
+          fi
+          echo "✅ Successfully retrieved access token"
+          echo "token=$token" >> $GITHUB_OUTPUT
+
       - name: Call BTP CI IFlow
         id: step2
         run: |
           echo "${{ steps.step1.outputs.fileoutput }}"
           curl -v -i -X GET "https://accenture-sbg-asg.it-cpi024-rt.cfapps.eu10-002.hana.ondemand.com/http/SyncArtifactsDispatcher/GITHUB" \
                -H "Content-Type: application/text" \
-               -H "Authorization: Bearer ${{ secrets.API_KEY }}" \
+               -H "Authorization: Bearer ${{ steps.get_token.outputs.token }}" \
                -d "${{ steps.step1.outputs.fileoutput }}"
 
       - name: Call Naming Convention Check IFlow
@@ -47,5 +66,5 @@ jobs:
           echo "${{ steps.step1.outputs.fileoutput }}"
           curl -v -i -X GET "https://accenture-sbg-asg.it-cpi024-rt.cfapps.eu10-002.hana.ondemand.com/http/NamingConventionCheckwithPDforGIT" \
                -H "Content-Type: application/text" \
-               -H "Authorization: Bearer ${{ secrets.API_KEY }}" \
+               -H "Authorization: Bearer ${{ steps.get_token.outputs.token }}" \
                -d "${{ steps.step1.outputs.fileoutput }}"
