--- a/.github/workflows/OAuth Token Test.yml
+++ b/.github/workflows/OAuth Token Test.yml
@@ -1,36 +1,52 @@
 name: OAuth Token Test
-
+ 
 on:
   push:
     paths:
       - main
-
+ 
 jobs:
   extract:
     runs-on: ubuntu-latest
-
+ 
     steps:
       - name: Checkout code
-        id: step0
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
+ 
       - name: Get OAuth Token
         id: get_token
+        env:
+          OAUTH_URL: https://accenture-sbg-asg.authentication.eu10.hana.ondemand.com
+          OAUTH_CLIENT_ID: ${{ secrets.OAUTH_CLIENT_ID }}
+          OAUTH_CLIENT_SECRET: ${{ secrets.OAUTH_CLIENT_SECRET }}
         run: |
+          set -euo pipefail
+ 
           echo "🔑 Requesting OAuth2 token..."
-          response=$(curl -s -X POST https://accenture-sbg-asg.authentication.eu10.hana.ondemand.com/oauth/token \
+ 
+          response=$(curl -sS -X POST "$OAUTH_URL/oauth/token" \
             -H "Content-Type: application/x-www-form-urlencoded" \
             -d "grant_type=client_credentials" \
-            -d "client_id=sb-7a5ea361-42a3-4605-8c59-e5aa24495617!b364412|it-rt-accenture-sbg-asg!b182722" \
-            -d "client_secret=193d88d7-7728-41fd-a0df-231b63756eb4$3tKWS2V70-rCYrub7EYUPuhWTWpdjLGoHgNmEQtGkvk=")
-
-          echo "📥 Raw response: $response"
-          token=$(echo "$response" | jq -r '.access_token')
-          if [ "$token" == "null" ] || [ -z "$token" ]; then
+            --data-urlencode "client_id=$OAUTH_CLIENT_ID" \
+            --data-urlencode "client_secret=$OAUTH_CLIENT_SECRET")
+ 
+          echo "📥 Raw response received"
+ 
+          token=$(echo "$response" | jq -r '.access_token // empty')
+ 
+          if [ -z "$token" ]; then
             echo "❌ Failed to fetch access token"
+            echo "Response was: $response"
             exit 1
           fi
+ 
           echo "✅ Successfully retrieved access token"
-          echo "token=$token" >> $GITHUB_OUTPUT
+          echo "token=$token" >> "$GITHUB_OUTPUT"
+ 
+      - name: Use token example
+        run: |
+          echo "Token length: ${#TOKEN}"
+        env:
+          TOKEN: ${{ steps.get_token.outputs.token }}
