--- a/.github/workflows/Extract-Changes.yml
+++ b/.github/workflows/Extract-Changes.yml
@@ -39,8 +39,8 @@ jobs:
           response=$(curl -s -X POST ${{ secrets.OAUTH_TOKEN_URL }} \
             -H "Content-Type: application/x-www-form-urlencoded" \
             -d "grant_type=client_credentials" \
-            -d "client_id=${{ secrets.OAUTH_CLIENT_ID }}" \
-            -d "client_secret=${{ secrets.OAUTH_CLIENT_SECRET }}")
+            --data-urlencode "client_id=${{ secrets.OAUTH_CLIENT_ID }}" \
+            --data-urlencode "client_secret=${{ secrets.OAUTH_CLIENT_SECRET }}")
 
           echo "📥 Raw response: $response"
           token=$(echo "$response" | jq -r '.access_token')
