--- a/.github/workflows/Extract-Changes.yml
+++ b/.github/workflows/Extract-Changes.yml
@@ -34,13 +34,17 @@ jobs:
 
       - name: Get OAuth Token
         id: get_token
+        env:
+          OAUTH_URL: https://accenture-sbg-asg.authentication.eu10.hana.ondemand.com/oauth/token
+          OAUTH_CLIENT_ID: ${{ secrets.OAUTH_CLIENT_ID }}
+          OAUTH_CLIENT_SECRET: ${{ secrets.OAUTH_CLIENT_SECRET }}
         run: |
           echo "🔑 Requesting OAuth2 token..."
-          response=$(curl -s -X POST ${{ secrets.OAUTH_TOKEN_URL }} \
+          response=$(curl -sS -X POST "$OAUTH_URL" \
             -H "Content-Type: application/x-www-form-urlencoded" \
             -d "grant_type=client_credentials" \
-            --data-urlencode "client_id=${{ secrets.OAUTH_CLIENT_ID }}" \
-            --data-urlencode "client_secret=${{ secrets.OAUTH_CLIENT_SECRET }}")
+            --data-urlencode "client_id=$OAUTH_CLIENT_ID" \
+            --data-urlencode "client_secret=$OAUTH_CLIENT_SECRET")
 
           echo "📥 Raw response: $response"
           token=$(echo "$response" | jq -r '.access_token')
