--- a/.github/workflows/Extract-Changes.yml
+++ b/.github/workflows/Extract-Changes.yml
@@ -20,7 +20,7 @@ jobs:
         id: step1
         run: |
           echo "🔍 Extracting added lines from modified files..."
-          git diff HEAD^ HEAD > diff.txt
+          git diff HEAD^ HEAD --ignore-matching-lines='^Timestamp:' -- CPI_Artifacts_Metadata.txt > diff.txt
           echo "📄 Diff output saved to diff.txt"
           echo "📥 Extracting Added/Deleted/Changed lines..."
           grep '^+' diff.txt | grep -v '^+++' | sed 's/^+//' > added_lines.txt
